--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
           pharma-focused ecosystem to manage inventory, generate bills, and scale your business efficiently.
         </p>
         <div class="cta-group">
-          <button class="btn-primary" routerLink="/register">Get Started Now</button>
+          <button class="btn-primary" routerLink="/login">Get Started Now</button>
           <button class="btn-secondary" (click)="scrollToFeatures(features)">Learn More</button>
         </div>
       </div>
